<resources
    xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">My Bus Edinburgh</string>
    <string name="app_description">View live bus data in Edinburgh</string>
    <string name="app_author" tools:ignore="MissingTranslation">Niall Scott</string>
    <string name="app_author_website" tools:ignore="MissingTranslation">http://www.rivernile.org.uk/</string>
    <string name="app_website" tools:ignore="MissingTranslation">http://www.rivernile.org.uk/bustracker/</string>
    <string name="app_twitter" tools:ignore="MissingTranslation">http://twitter.com/MyBusEdinburgh</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="asset_db_version" tools:ignore="MissingTranslation">1402286404622</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="no">No</string>
    <string name="okay">OK</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="yes">Yes</string>
    <string name="remove">Remove</string>
    <string name="loading">Loading&#8230;</string>
    <string name="prox_alert_add">Add proximity alert</string>
    <string name="prox_alert_rem">Remove proximity alert</string>
    <string name="time_alert_add">Add arrival alert</string>
    <string name="time_alert_rem">Remove arrival alert</string>
    <string name="favourite_add">Add favourite</string>
    <string name="favourite_rem">Remove favourite</string>
    <string name="bus_stop_db_updated">My Bus Edinburgh: The stop database has been updated to the latest version.</string>
    <string name="bus_stop_db_no_updates">My Bus Edinburgh: No stop database updates found.</string>
    <string name="times_never">never</string>
    <string name="times_lessthanoneminago">now</string>
    <plurals name="times_minsago">
        <item quantity="one">1 minute ago</item>
        <item quantity="other">%d minutes ago</item> 
    </plurals>
    <string name="times_greaterthanhour">more than 1 hour ago</string>
    <string name="busstop" tools:ignore="MissingTranslation">%1$s (%2$s)</string>
    <string name="busstop_locality" tools:ignore="MissingTranslation">%1$s, %2$s (%3$s)</string>
    <string name="busstop_coloured" tools:ignore="MissingTranslation"><![CDATA[%1$s <font color="#989898">(%2$s)</font>]]></string>
    <string name="busstop_locality_coloured" tools:ignore="MissingTranslation"><![CDATA[%1$s, %2$s <font color="#989898">(%3$s)</font>]]></string>
    <string name="orientation_unknown">Faces unknown direction</string>
    <string-array name="orientations">
        <item>Faces north</item>
        <item>Faces north east</item>
        <item>Faces east</item>
        <item>Faces south east</item>
        <item>Faces south</item>
        <item>Faces south west</item>
        <item>Faces west</item>
        <item>Faces north west</item>
    </string-array>
    <string name="addeditstop_title">Add/edit favourite stop</string>
    <string name="addproxalert_title">Add new proximity alert</string>
    <string name="addtimealert_title">Add new arrival alert</string>
    <string name="busstopdetails_title">Stop details</string>
    <string name="map_title">Map</string>
    <string name="displaystopdata_title">Live departures</string>
    <string name="displaystopdata_tab_times">Times</string>
    <string name="displaystopdata_tab_details">Details</string>
    <string name="favouritestops_title">Favourite stops</string>
    <string name="main_drawer_open">Open application navigation</string>
    <string name="main_drawer_close">Close application navigation</string>
    <string name="search_title">Search</string>
    <string name="search_scan_error">There was a problem reading the QR code data</string>
    <string name="search_invalid_qrcode">The scanned QR code does not contain stop data</string>
    <string name="search_error_empty">Type your search term or enter a stop code to begin</string>
    <string name="search_error_no_results">No results</string>
    <string name="preferences_title">Settings</string>
    <string name="preferences_category_general">General</string>
    <string name="preferences_checkbox_general_databaseupdatewifi">Updates via Wi-Fi only</string>
    <string name="preferences_checkbox_general_databaseupdatewifi_summary">To reduce network provider data charges, don\'t update the stop database over mobile networks</string>
    <string name="preferences_dialog_general_backup">Backup favourites</string>
    <string name="preferences_dialog_general_backup_summary">To external storage</string>
    <string name="preferences_dialog_general_backup_message">Are you sure you want to backup your favourite stops list?</string>
    <string name="preferences_dialog_general_restore">Restore favourites</string>
    <string name="preferences_dialog_general_restore_summary">From external storage</string>
    <string name="preferences_dialog_general_restore_message">Are you sure you want to restore your favourite stops list? Warning: This will overwrite your current favourite stops list.</string>
    <string name="preferences_category_alerts">Alerts</string>
    <string name="preferences_checkbox_alerts_sound">Use sound</string>
    <string name="preferences_checkbox_alerts_vibrate">Use vibration</string>
    <string name="preferences_checkbox_alerts_vibrate_summary">If the device supports vibration</string>
    <string name="preferences_checkbox_alerts_led">Flash device LED</string>
    <string name="preferences_checkbox_alerts_led_summary">If the device supports it</string>
    <string name="preferences_category_bustimes">Bus Times Display</string>
    <string name="preferences_checkbox_bustimes_autorefresh">Auto refresh</string>
    <string name="preferences_checkbox_bustimes_autorefresh_ticked">Untick to not auto refresh by default</string>
    <string name="preferences_checkbox_bustimes_autorefresh_unticked">Tick to auto refresh by default</string>
    <string name="preferences_checkbox_bustimes_nightbus">Show night services</string>
    <string name="preferences_checkbox_bustimes_sorting">Sort by arrival time</string>
    <string name="preferences_list_bustimes_numdepartures">Number of departures</string>
    <string name="preferences_list_bustimes_dialog">Number of departures to show</string>
    <string name="preferences_category_map">Map</string>
    <string name="preferences_checkbox_map_autolocation">Enable location services</string>
    <string name="preferences_checkbox_map_zoom_buttons">Zoom buttons</string>
    <string name="preferences_dialog_map_clearsearchhistory">Clear search history</string>
    <string name="preferences_dialog_map_clearsearchhistory_summary">Remove all previous search terms from the map search facility</string>
    <string name="preferences_dialog_map_clearsearchhistory_message">Are you sure you want to clear your map search history?</string>
    <string name="preferences_category_neareststops">Nearest Stops Display</string>
    <string name="preferences_checkbox_neareststops_gpsdisabled">Disable GPS prompt</string>
    <string name="preferences_checkbox_neareststops_gpsdisabled_ticked">Untick to show a prompt when GPS is disabled</string>
    <string name="preferences_checkbox_neareststops_gpsdisabled_unticked">Tick to not show a prompt when GPS is disabled</string>
    <string name="preferences_backup_restore_error_media">Unable to access external storage. Is it present?</string>
    <string name="preferences_backup_error_write">Unable to backup the favourites to external storage</string>
    <string name="preferences_restore_error_no_file">There is no existing backup file</string>
    <string name="preferences_restore_error_unable_read">Unable to read the backup data</string>
    <string name="preferences_restore_error_data_malformed">Backup data is corrupt</string>
    <string name="preference_backup_success">The database was successfully backed up to external storage</string>
    <string name="preference_backup_permission_denied">Unable to backup as the permission was denied</string>
    <string name="preference_restore_success">The database was successfully restored</string>
    <string name="preference_restore_permission_denied">Unable to restore as the permission was denied</string>
    <string-array name="preferences_num_departures_entries">
        <item>1 departure</item>
        <item>2 departures</item>
        <item>3 departures</item>
        <item>4 departures</item>
        <item>5 departures</item>
        <item>6 departures</item>
        <item>7 departures</item>
        <item>8 departures</item>
        <item>9 departures</item>
        <item>10 departures</item>
    </string-array>
    <string-array name="preferences_num_departures_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="about_title">About</string>
    <string name="about_version">Application version</string>
    <string name="about_author">Author</string>
    <string name="about_database_version">Database version</string>
    <string name="about_topology_version">Topology version</string>
    <string name="about_website">Website</string>
    <string name="about_twitter">Twitter</string>
    <string name="about_credits">Credits</string>
    <string name="about_open_source">Open source licences</string>
    <string name="about_database_version_loading">@string/loading</string>
    <string name="about_database_version_error">Loading error</string>
    <string name="about_topology_version_loading">@string/loading</string>
    <string name="about_topology_version_error">@string/about_database_version_error</string>
    <string name="about_version_format" tools:ignore="MissingTranslation">%1$s (#%2$d)</string>
    <string name="about_database_version_format" tools:ignore="MissingTranslation">%1$d (%2$s)</string>
    <string name="addeditstop_title_add">Add favourite stop %s</string>
    <string name="addeditstop_title_edit">Edit stop name for %s</string>
    <string name="addeditstop_description">Enter a name for this stop:</string>
    <string name="addeditstop_edit_stopname_hint">Stop name</string>
    <string name="addeditstop_error_blankstopname">You cannot have a blank stop name.</string>
    <string name="addeditstop_btn_save">Save</string>
    <string name="addproxalert_first">Alert me when I am within</string>
    <string-array name="addproxalert_distance_array">
        <item>100 metres (109 yards)</item>
        <item>250 metres (273 yards)</item>
        <item>500 metres (546 yards)</item>
        <item>750 metres (820 yards)</item>
        <item>1000 metres (1093 yards)</item>
    </string-array>
    <string name="addproxalert_second">of stop %s.</string>
    <string name="addproxalert_gps">For this feature to work properly, it is strongly advised that GPS is turned on. Tick this if you would like to go to the device preferences after you have set this alert to turn GPS on.</string>
    <string name="addproxalert_limitations">Show limitations</string>
    <string name="addtimealert_first">Alert me when any of these services</string>
    <string name="addtimealert_noservices">No services selected. You must select at least 1 service to continue.</string>
    <string name="addtimealert_isdue">is due</string>
    <string name="addtimealert_spinner_prompt">Select time trigger</string>
    <string name="alertmanager_time_title">Arrival alert</string>
    <string name="alertmanager_time_blurb">This alert is removed after 1 hour or if the device is restarted</string>
    <string name="favouritestops_menu_edit">Edit name</string>
    <string name="favouritestops_menu_delete">Delete</string>
    <string name="favouritestops_menu_showonmap">Show on map</string>
</resources>