<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Copyright (C) 2009 - 2014 Niall 'Rivernile' Scott
 *
 * This software is provided 'as-is', without any express or implied
 * warranty.  In no event will the authors or contributors be held liable for
 * any damages arising from the use of this software.
 *
 * The aforementioned copyright holder(s) hereby grant you a
 * non-transferrable right to use this software for any purpose (including
 * commercial applications), and to modify it and redistribute it, subject to
 * the following conditions:
 *
 *  1. This notice may not be removed or altered from any file it appears in.
 *
 *  2. Any modifications made to this software, except those defined in
 *     clause 3 of this agreement, must be released under this license, and
 *     the source code of any modifications must be made available on a
 *     publically accessible (and locateable) website, or sent to the
 *     original author of this software.
 *
 *  3. Software modifications that do not alter the functionality of the
 *     software but are simply adaptations to a specific environment are
 *     exempt from clause 2.
 */ -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <!-- General -->
    <PreferenceCategory
        android:title="@string/preferences_category_general">
        <CheckBoxPreference
            android:key="pref_bus_stop_database_wifi_only"
            android:title="@string/preferences_checkbox_general_databaseupdatewifi"
            android:summary="@string/preferences_checkbox_general_databaseupdatewifi_summary"
            android:defaultValue="false" />
        <uk.org.rivernile.android.utils.GenericDialogPreference
            android:key="pref_backup_favourites"
            android:title="@string/preferences_dialog_general_backup"
            android:summary="@string/preferences_dialog_general_backup_summary"
            android:dialogTitle="@string/preferences_dialog_general_backup"
            android:dialogMessage="@string/preferences_dialog_general_backup_message"
            android:positiveButtonText="@string/yes"
            android:negativeButtonText="@string/no" />
        <uk.org.rivernile.android.utils.GenericDialogPreference
            android:key="pref_restore_favourites"
            android:title="@string/preferences_dialog_general_restore"
            android:summary="@string/preferences_dialog_general_restore_summary"
            android:dialogTitle="@string/preferences_dialog_general_restore"
            android:dialogMessage="@string/preferences_dialog_general_restore_message"
            android:positiveButtonText="@string/yes"
            android:negativeButtonText="@string/no" />
    </PreferenceCategory>
    
    <!-- Alerts -->
    <PreferenceCategory
        android:title="@string/preferences_category_alerts">
        <CheckBoxPreference
            android:key="pref_alertsound_state"
            android:title="@string/preferences_checkbox_alerts_sound"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_alertvibrate_state"
            android:title="@string/preferences_checkbox_alerts_vibrate"
            android:summary="@string/preferences_checkbox_alerts_vibrate_summary"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_alertled_state"
            android:title="@string/preferences_checkbox_alerts_led"
            android:summary="@string/preferences_checkbox_alerts_led_summary"
            android:defaultValue="true" />
    </PreferenceCategory>
    
    <!-- Bus Times Display -->
    <PreferenceCategory
        android:title="@string/preferences_category_bustimes">
        <CheckBoxPreference
            android:key="pref_autorefresh_state"
            android:title="@string/preferences_checkbox_bustimes_autorefresh"
            android:summaryOn="@string/preferences_checkbox_bustimes_autorefresh_ticked"
            android:summaryOff="@string/preferences_checkbox_bustimes_autorefresh_unticked"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_nightservices_state"
            android:title="@string/preferences_checkbox_bustimes_nightbus"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_servicessorting_state"
            android:title="@string/preferences_checkbox_bustimes_sorting"
            android:defaultValue="false" />
        <ListPreference
            android:key="pref_numberOfShownDeparturesPerService"
            android:title="@string/preferences_list_bustimes_numdepartures"
            android:defaultValue="4"
            android:dialogTitle="@string/preferences_list_bustimes_dialog"
            android:entries="@array/preferences_num_departures_entries"
            android:entryValues="@array/preferences_num_departures_entry_values" />
    </PreferenceCategory>
    
    <!-- Bus Stop Map -->
    <PreferenceCategory
        android:title="@string/preferences_category_map">
        <CheckBoxPreference
            android:key="pref_map_zoom_buttons_state"
            android:title="@string/preferences_checkbox_map_zoom_buttons"
            android:defaultValue="true" />
        <uk.org.rivernile.android.utils.GenericDialogPreference
            android:key="pref_clear_search_history"
            android:title="@string/preferences_dialog_map_clearsearchhistory"
            android:summary="@string/preferences_dialog_map_clearsearchhistory_summary"
            android:dialogTitle="@string/preferences_dialog_map_clearsearchhistory"
            android:dialogMessage="@string/preferences_dialog_map_clearsearchhistory_message"
            android:positiveButtonText="@string/yes"
            android:negativeButtonText="@string/no" />
    </PreferenceCategory>
    
    <!-- Nearest Stops Display -->
    <PreferenceCategory
        android:title="@string/preferences_category_neareststops">
        <CheckBoxPreference
            android:key="neareststops_gps_prompt_disable"
            android:title="@string/preferences_checkbox_neareststops_gpsdisabled"
            android:summaryOn="@string/preferences_checkbox_neareststops_gpsdisabled_ticked"
            android:summaryOff="@string/preferences_checkbox_neareststops_gpsdisabled_unticked"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>