<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Copyright (C) 2012 - 2013 Niall 'Rivernile' Scott
 *
 * This software is provided 'as-is', without any express or implied
 * warranty.  In no event will the authors or contributors be held liable for
 * any damages arising from the use of this software.
 *
 * The aforementioned copyright holder(s) hereby grant you a
 * non-transferrable right to use this software for any purpose (including
 * commercial applications), and to modify it and redistribute it, subject to
 * the following conditions:
 *
 *  1. This notice may not be removed or altered from any file it appears in.
 *
 *  2. Any modifications made to this software, except those defined in
 *     clause 3 of this agreement, must be released under this license, and
 *     the source code of any modifications must be made available on a
 *     publically accessible (and locateable) website, or sent to the
 *     original author of this software.
 *
 *  3. Software modifications that do not alter the functionality of the
 *     software but are simply adaptations to a specific environment are
 *     exempt from clause 2.
*/ -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uk.org.rivernile.android.bustracker.ui.main.MainActivity">
    <item
        android:id="@+id/favouritestops_context_menu_modify"
        android:title="@string/favouritestops_menu_edit"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favouritestops_context_menu_delete"
        android:title="@string/favouritestops_menu_delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favouritestops_context_menu_prox_alert"
        app:showAsAction="never"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/favouritestops_context_menu_time_alert"
        app:showAsAction="never"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/favouritestops_context_menu_showonmap"
        android:title="@string/favouritestops_menu_showonmap"
        android:icon="@drawable/ic_action_map"
        app:showAsAction="never" />
</menu>