<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2016 - 2021 Niall 'Rivernile' Scott
 *
 * This software is provided 'as-is', without any express or implied
 * warranty.  In no event will the authors or contributors be held liable for
 * any damages arising from the use of this software.
 *
 * The aforementioned copyright holder(s) hereby grant you a
 * non-transferrable right to use this software for any purpose (including
 * commercial applications), and to modify it and redistribute it, subject to
 * the following conditions:
 *
 *  1. This notice may not be removed or altered from any file it appears in.
 *
 *  2. Any modifications made to this software, except those defined in
 *     clause 3 of this agreement, must be released under this license, and
 *     the source code of any modifications must be made available on a
 *     publically accessible (and locateable) website, or sent to the
 *     original author of this software.
 *
 *  3. Software modifications that do not alter the functionality of the
 *     software but are simply adaptations to a specific environment are
 *     exempt from clause 2.
*/ -->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        style="@style/Card.Default"
        android:layout_marginTop="@dimen/padding_default"
        android:layout_marginBottom="@dimen/padding_default">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,16:9"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:visibility="gone"
                    map:liteMode="true"
                    map:mapType="normal"
                    map:cameraZoom="16"
                    map:uiCompass="false"
                    map:uiMapToolbar="false"
                    tools:background="@android:color/holo_green_light"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="@dimen/padding_double"
                android:layout_marginEnd="@dimen/padding_double"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/alertmanager_time_title" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="@dimen/padding_double"
                android:layout_marginEnd="@dimen/padding_double"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:textColorSecondary"
                tools:text="When any of services 1, 2, 3 are within 5 minutes of Some Stop, Area (12345678)"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="@dimen/padding_double"
                android:layout_marginEnd="@dimen/padding_double"
                android:text="@string/alertmanager_time_blurb"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btnRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="@dimen/padding_default"
                android:layout_marginStart="@dimen/padding_default"
                android:layout_marginEnd="@dimen/padding_default"
                android:text="@string/remove" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>